Fix overlapping issues

--- a/atlas-admin-frontend/scss/modules/_loaders.scss
+++ b/atlas-admin-frontend/scss/modules/_loaders.scss
@@ -1,6 +1,6 @@
 .loading-container  {
     width: 100%;
-    margin-top: 146px;
+    margin-top: 142px;
 }
 
 .page-loader {
